--- a/src/styles/partials/components/_link.scss
+++ b/src/styles/partials/components/_link.scss
@@ -130,3 +130,9 @@ $small-icon-link-size: 50px;
     }
   }
 }
+
+.dg_inline-icon-link {
+  i {
+    margin-right: $default-margin;
+  }
+}
